fixed 3 etapes on ie11

--- a/src/mrs/static/sass/index.sass
+++ b/src/mrs/static/sass/index.sass
@@ -226,6 +226,8 @@
 
       p
         margin: auto
+        display: flex
+        align-items: center
 
   #index-footer--wrapper
     display: flex
